[gd_scene load_steps=6 format=3 uid="uid://k00xohxst68s"]

[ext_resource type="Script" path="res://scenes/mainMenu/mainMenu.gd" id="1_c0jos"]
[ext_resource type="Theme" uid="uid://d2g42ey2qlbr4" path="res://themes/default_theme.tres" id="2_74bw5"]
[ext_resource type="Texture2D" uid="uid://ddqc0fyg05rkj" path="res://scenes/mainMenu/Fondo.png" id="3_apgsr"]
[ext_resource type="Theme" uid="uid://crsry4ufwitrm" path="res://themes/menu_buttons/botones_menu.tres" id="4_e8tuy"]
[ext_resource type="Texture2D" uid="uid://bhuv4oulryooa" path="res://scenes/mainMenu/Logo.png" id="5_3c2tj"]

[node name="mainMenu" type="CanvasLayer"]
script = ExtResource("1_c0jos")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
offset_left = 1297.0
offset_top = 184.0
offset_right = 1766.0
offset_bottom = 898.0
auto_translate = false
localize_numeral_system = false

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
custom_minimum_size = Vector2(10, 10)
anchors_preset = -1
anchor_left = 0.902
anchor_top = 0.5
anchor_right = 0.902
anchor_bottom = 0.5
offset_left = -708.84
offset_top = -435.0
offset_right = 173.16
offset_bottom = 446.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0

[node name="backButton" type="Button" parent="."]
visible = false
offset_left = 1696.0
offset_top = 991.0
offset_right = 1904.0
offset_bottom = 1052.0
theme = ExtResource("2_74bw5")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 36
text = "VOLVER"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_apgsr")
expand_mode = 1

[node name="playButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = 89.0
offset_right = 146.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("4_e8tuy")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 65
text = "JUGAR"

[node name="optionsButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = 164.0
offset_right = 141.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_e8tuy")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 50
text = "OPCIONES"

[node name="creditsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = 259.0
offset_right = 135.5
offset_bottom = 387.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_e8tuy")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 50
text = "CRÃ‰DITOS"

[node name="Logo" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -579.5
offset_top = 96.0
offset_right = 579.5
offset_bottom = 516.0
grow_horizontal = 2
texture = ExtResource("5_3c2tj")

[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="creditsButton" to="." method="_on_credits_button_pressed"]
